--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -13,9 +13,9 @@ shot_profiles:
 counters:
   counter_villagermultiball:
     count_events: worldspinner_hit
-    starting_count: 0
+    starting_count: 1
     count_interval: 1
-    count_complete_value: 20
+    count_complete_value: machine.difficulty_villager #Default 20
     persist_state: true
     restart_events: multiball_villagermb_ended, multiball_nightvillagermb_ended
     disable_events: villagermb_disable, multiball_nightmb_started
@@ -23,12 +23,12 @@ counters:
 
   counter_nightmultiball:
     count_events: popbumper1_hit, popbumper2_hit, popbumper3_hit
-    starting_count: 0
+    starting_count: 1
     count_interval: 1
-    count_complete_value: 50
+    count_complete_value: machine.difficulty_night #Default 100
     persist_state: true
     restart_events: multiball_nightmb_ended, multiball_nightvillagermb_ended
-    disable_events: nightmb_disable, multiball_villagermb_started
+    disable_events: nightmb_disable, multiball_nightmb_started, multiball_villagermb_started
     enable_events: mode_worldcontroller_started, multiball_villagermb_ended
 
 multiball_locks:
@@ -153,22 +153,27 @@ sound_player:
     night_mode_ready
 
 light_player:
-  show_spinner_progress{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*1}: #LEVEL 100
+    l_spinner1: off
+    l_spinner2: off
+    l_spinner3: off
+    l_spinner4: off  
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*1 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*2}: #LEVEL 1000
     l_spinner1: green
     l_spinner2: off
     l_spinner3: off
     l_spinner4: off
-  show_spinner_progress{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*2 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*3}: #LEVEL 1000
     l_spinner1: off
     l_spinner2: green
     l_spinner3: off
     l_spinner4: off
-  show_spinner_progress{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 1000
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*3 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*4}: #LEVEL 1000
     l_spinner1: off
     l_spinner2: off
     l_spinner3: green
     l_spinner4: off
-  show_spinner_progress{device.counters.counter_villagermultiball.value>=16}:
+  show_spinner_progress{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*4}:
     l_spinner3: off 
     l_spinner2: off 
     l_spinner1: off
@@ -225,19 +230,19 @@ variable_player:
       action: set 
 
   #SPINNER SCORING
-  worldspinner_hit{device.counters.counter_villagermultiball.value<4}: #LEVEL 100
+  worldspinner_hit{device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*1}: #LEVEL 100
     score: 100 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  worldspinner_hit{device.counters.counter_villagermultiball.value>=4 and device.counters.counter_villagermultiball.value<8}: #LEVEL 1000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*1 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*2}: #LEVEL 1000
     score: 1000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  worldspinner_hit{device.counters.counter_villagermultiball.value>=8 and device.counters.counter_villagermultiball.value<12}: #LEVEL 2000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*2 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*3}: #LEVEL 2000
     score: 2000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  worldspinner_hit{device.counters.counter_villagermultiball.value>=12 and device.counters.counter_villagermultiball.value<16}: #LEVEL 3000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*3 and device.counters.counter_villagermultiball.value<machine.difficulty_villager/5*4}: #LEVEL 3000
     score: 3000 * current_player.multiplier_mb
     world_jackpot_base: 1000
-  worldspinner_hit{device.counters.counter_villagermultiball.value>=16}: #LEVEL 4000
+  worldspinner_hit{device.counters.counter_villagermultiball.value>=machine.difficulty_villager/5*4}: #LEVEL 4000
     score: 4000 * current_player.multiplier_mb
     world_jackpot_base: 1000
 
@@ -683,16 +688,8 @@ event_player:
   multiball_lock_nightvillagerlock1_full:
     nightvillagermultiball_enablelock2
 
-  # ball_drain{device.multiball_locks.nightvillagerlock1.locked_balls==1}:
-  #   eject_topkicker
-  #   nightvillagermultiball_disable
-
-
 
 #TODO:  MAKE THIS A MODE TO RESET LOCKED BALLS
-  balldevice_bd_trough_ball_count_changed{device.ball_devices.bd_trough.balls==1}:
-    multiball_lost_ball
-
   balldevice_bd_trough_ball_count_changed{device.ball_devices.bd_trough.balls==3}:
     trough_allballs
 
