--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -1,15 +1,12 @@
-difficulty_extraball1:
+difficulty_night:
   expire: null
-  value: 0
-difficulty_extraball2:
+  value: 76
+difficulty_villager:
   expire: null
-  value: 0
-difficulty_tools:
+  value: 21
+game_mode:
   expire: null
-  value: 4
-game_num_players:
+  value: NORMAL
+game_mode_display:
   expire: null
-  value: 1
-player1_score:
-  expire: null
-  value: 202464900
+  value: Normal Mode
